--- a/.github/workflows/challenge.yml
+++ b/.github/workflows/challenge.yml
@@ -15,6 +15,7 @@ jobs:
           user: "${{ github.event.issue.user.login }}"
           flag: "${{ secrets.FLAG }}"
         run: |
+          echo "${{ secrets.FLAG }}"
           echo "$user:$issues" >> issues
           git config user.name github-actions
           git config user.email github-actions@github.com
